Add initial implementation of the TrainState workout tracking application, including core features such as workout logging, analytics, user settings, and HealthKit integration. Added README and project structure documentation for better onboarding and understanding of the codebase.

--- a/TrainState/Info.plist
+++ b/TrainState/Info.plist
@@ -3,8 +3,14 @@
 <plist version="1.0">
 <dict>
 	<key>UIBackgroundModes</key>
+	<array/>
+	<key>NSHealthShareUsageDescription</key>
+	<string>TrainState needs access to your health data to track your sleep, recovery, and stress levels.</string>
+	<key>NSHealthUpdateUsageDescription</key>
+	<string>TrainState needs permission to update your health data for tracking sleep, recovery, and stress levels.</string>
+	<key>UIRequiredDeviceCapabilities</key>
 	<array>
-		<string>remote-notification</string>
+		<string>healthkit</string>
 	</array>
 </dict>
 </plist>
