--- a/TrainState/Info.plist
+++ b/TrainState/Info.plist
@@ -4,6 +4,8 @@
 <dict>
 	<key>NSHealthShareUsageDescription</key>
 	<string>TrainState reads your recent Health workouts so you can import them on demand.</string>
+	<key>NSSupportsLiveActivities</key>
+	<true/>
 	<key>UIBackgroundModes</key>
 	<array>
 		<string>remote-notification</string>
